# zero-knowledge-proofs

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PERFORMANCE.md  PLONK_SPEC.md  README.md  SECURITY.md
.github/workflows/: benchmarks.yml  ci.yml
benches/: Cargo.toml  zkvm_benchmarks.rs
benches/benches/: plonk_bench.rs
benches/src/: lib.rs  utils.rs
cli/plonk-compile/: Cargo.toml
cli/plonk-compile/src/: main.rs
cli/plonk-prove/: Cargo.toml
cli/plonk-prove/src/: main.rs
cli/plonk-setup-universal/: Cargo.toml
cli/plonk-setup-universal/src/: main.rs
cli/plonk-verify/: Cargo.toml
cli/plonk-verify/src/: main.rs
crates/air/: Cargo.toml
crates/air/src/: lib.rs
crates/benches/: Cargo.toml
crates/benches/benches/: commitment_performance.rs  end_to_end.rs  folding_performance.rs  ipa.rs  optimization_performance.rs  range_proof.rs  stark_benchmarks.rs
crates/benches/src/: lib.rs  utils.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: end_to_end.rs  smoke.rs
crates/benchmarks/src/: lib.rs
crates/bulletproofs-core/: Cargo.toml
crates/bulletproofs-core/src/: errors.rs  generators.rs  group.rs  lib.rs  transcript.rs  utils.rs
crates/cli/: Cargo.toml
crates/cli/src/: common.rs  lib.rs  prove.rs  setup.rs  verify.rs
crates/commitments/: Cargo.toml
crates/commitments/benches/: commitment_bench.rs  commitment_ops.rs
crates/commitments/src/: kate.rs  kzg.rs  lib.rs  traits.rs  utils.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: assembler.rs  bytecode.rs  lib.rs
crates/examples/: Cargo.toml
crates/examples/src/: fibonacci.rs  lib.rs  matrix_vector_product.rs  optimization_demo.rs  recursive_computation.rs  simple_cpu.rs  token_contract.rs
crates/field/: Cargo.toml  README.md
crates/field/benches/: field_ops.rs
crates/field/src/: batch.rs  bls12_381.rs  fft.rs  lib.rs  polynomial.rs
crates/folding/: Cargo.toml
crates/folding/benches/: folding_bench.rs
crates/folding/src/: lib.rs
crates/fri/: Cargo.toml
crates/fri/benches/: fri_ops.rs
crates/fri/src/: lib.rs
crates/groth-backend/: Cargo.toml
crates/groth-backend/src/: lib.rs
crates/groth16/: Cargo.toml
crates/groth16-benchmarks/: Cargo.toml
crates/groth16-benchmarks/benches/: groth16_bench.rs
crates/groth16-benchmarks/src/: lib.rs
crates/groth16-cli/: Cargo.toml
crates/groth16-cli/src/: lib.rs  main.rs
crates/groth16-core/: Cargo.toml
crates/groth16-core/src/: lib.rs
crates/groth16-examples/: Cargo.toml
crates/groth16-examples/examples/: arithmetic_circuit.rs  range_check.rs
crates/groth16-examples/src/: lib.rs
crates/groth16-field/: Cargo.toml
crates/groth16-field/src/: lib.rs
crates/groth16-qap/: Cargo.toml
crates/groth16-qap/src/: lib.rs
crates/groth16-r1cs/: Cargo.toml
crates/groth16-r1cs/src/: lib.rs
crates/groth16-setup/: Cargo.toml
crates/groth16-setup/src/: lib.rs
crates/groth16/benches/: groth16_bench.rs
crates/groth16/src/: lib.rs
crates/halo/commitments/: Cargo.toml
crates/halo/commitments/src/: commitment_engine.rs  errors.rs  ipa.rs  lib.rs  msm.rs  transcript.rs
crates/halo/examples/: Cargo.toml
crates/halo/examples/examples/: comprehensive_demo.rs  scalar_multiplication_sequencer.rs
crates/halo/examples/src/: fibonacci.rs  lib.rs  lookup_demo.rs  scalar_multiplication.rs
crates/halo/halo-core/: Cargo.toml
crates/halo/halo-core/src/: circuit.rs  errors.rs  lib.rs  proof.rs  prover.rs  verifier.rs
crates/halo/halo-recursion/: Cargo.toml
crates/halo/halo-recursion/src/: accumulator.rs  errors.rs  folding.rs  lib.rs  recursive_verifier.rs
crates/halo/halo2-arith/: Cargo.toml
crates/halo/halo2-arith/src/: circuit.rs  columns.rs  constraints.rs  errors.rs  gates.rs  lib.rs  lookup.rs
crates/integration/: Cargo.toml
crates/integration/benches/: end_to_end.rs
crates/integration/src/: benchmarks.rs  lib.rs
crates/ipa/: Cargo.toml
crates/ipa/src/: lib.rs  proof.rs  prover.rs  verifier.rs
crates/marlin/: Cargo.toml
crates/marlin/benches/: marlin_prove.rs  marlin_verify.rs
crates/marlin/src/: iop.rs  lib.rs  prover.rs  r1cs.rs  setup.rs  transcript.rs  verifier.rs
crates/merkle/: Cargo.toml
crates/merkle/benches/: merkle_ops.rs
crates/merkle/src/: lib.rs
crates/nova-core/: Cargo.toml
crates/nova-core/benches/: core_ops.rs
crates/nova-core/src/: errors.rs  fields.rs  folding.rs  instances.rs  lib.rs  transcripts.rs  witnesses.rs
crates/pc/: Cargo.toml  README.md
crates/pc/src/: lib.rs
crates/plonk-arith/: Cargo.toml
crates/plonk-arith/src/: lib.rs
crates/plonk-backend/: Cargo.toml
crates/plonk-backend/src/: lib.rs  prover.rs  setup.rs  verifier.rs
crates/plonk-prover/: Cargo.toml
crates/plonk-prover/src/: lib.rs
crates/plonk-verifier/: Cargo.toml
crates/plonk-verifier/src/: lib.rs
crates/prover/: Cargo.toml
crates/prover/src/: constraints.rs  lib.rs  stark_prover.rs  transcript.rs
crates/qap/: Cargo.toml
crates/qap/src/: lib.rs  polynomial.rs  qap.rs
crates/r1cs/: Cargo.toml
crates/r1cs/src/: constraint.rs  lib.rs  linear_combination.rs  variable.rs
crates/range/: Cargo.toml
crates/range/src/: constraints_new.rs  constraints_old.rs  lib.rs  proof.rs  property_tests.rs  prover.rs  verifier.rs
crates/setup/: Cargo.toml
crates/setup/src/: crs.rs  lib.rs  powers_of_tau.rs  toxic_waste.rs
crates/sonic/: Cargo.toml
crates/sonic/benches/: sonic_aggregation.rs
crates/sonic/src/: aggregation.rs  kate_commitments.rs  lib.rs  linear_algebra.rs  multipoint.rs
crates/stark-backend/: Cargo.toml
crates/stark-backend/src/: lib.rs
crates/stark-field/: Cargo.toml
crates/stark-field/benches/: field_ops.rs
crates/stark-field/src/: lib.rs
crates/trace/: Cargo.toml
crates/trace/src/: lib.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: lib.rs  stark_verifier.rs
crates/zkvm-core/: Cargo.toml
crates/zkvm-core/src/: constraints.rs  instruction.rs  lib.rs  state.rs  trace.rs
examples/: Cargo.toml  simple_demo.rs
