[workspace]
members = [
    "crates/zkvm-core",
    "crates/compiler", 
    "crates/plonk-backend",
    "crates/stark-backend",
    "crates/groth-backend",
    "crates/examples",
    "crates/integration",
]
resolver = "2"

[workspace.dependencies]
# Common dependencies across the workspace
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3"

# Cryptographic dependencies
ark-ff = "0.4"
ark-ec = "0.4"
ark-poly = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
ark-bn254 = "0.4"
ark-bls12-381 = "0.4"

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

[profile.release]
debug = true
lto = true
codegen-units = 1

[profile.bench]
debug = true