[workspace]
members = [
    "crates/stark-field",
    "crates/air", 
    "crates/trace",
    "crates/fri",
    "crates/merkle",
    "crates/prover",
    "crates/verifier",
    "crates/examples",
    "crates/benches",
]

resolver = "2"

[workspace.dependencies]
# Field arithmetic and crypto
ark-ff = "0.4"
ark-poly = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
num-bigint = "0.4"
num-traits = "0.2"

# Cryptographic hashing
blake2 = "0.10"
sha3 = "0.10"

# Parallelism and performance
rayon = "1.7"
crossbeam = "0.8"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Testing
proptest = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = true