[package]
name = "halo-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple_demo"
path = "simple_demo.rs"

[dependencies]
halo-core = { path = "../crates/halo/halo-core" }
halo-recursion = { path = "../crates/halo/halo-recursion" }
halo2-arith = { path = "../crates/halo/halo2-arith" }
commitments = { path = "../crates/halo/commitments" }

# External dependencies
bls12_381 = "0.8"
ff = "0.13"
group = "0.13"
rand = "0.8"