[package]
name = "air"
version = "0.1.0"
edition = "2021"
description = "Algebraic Intermediate Representation for STARK proofs"
license = "MIT"

[dependencies]
stark-field = { path = "../stark-field" }
thiserror = { workspace = true }
serde = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }