[package]
name = "benches"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Benchmarks for Bulletproofs implementation"

[[bench]]
name = "range_proof"
harness = false

[[bench]]
name = "ipa"
harness = false

[dependencies]
bulletproofs-core = { path = "../bulletproofs-core" }
ipa = { path = "../ipa" }
range = { path = "../range" }
curve25519-dalek.workspace = true
merlin.workspace = true
rand.workspace = true
criterion.workspace = true