[package]
name = "zkp-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Performance benchmarks for zero-knowledge proof systems"

[dependencies]
zkp-field = { path = "../field" }
zkp-commitments = { path = "../commitments" }
zkp-marlin = { path = "../marlin" }
zkp-sonic = { path = "../sonic" }
zkp-examples = { path = "../examples" }
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "end_to_end"
harness = false

[[bench]]
name = "smoke"
harness = false