[package]
name = "zkp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line tools for Marlin and Sonic zero-knowledge proofs"

[[bin]]
name = "marlin-setup"
path = "src/bin/marlin_setup.rs"

[[bin]]
name = "marlin-prove"
path = "src/bin/marlin_prove.rs"

[[bin]]
name = "marlin-verify"
path = "src/bin/marlin_verify.rs"

[dependencies]
zkp-field = { path = "../field" }
zkp-commitments = { path = "../commitments" }
zkp-marlin = { path = "../marlin" }
zkp-sonic = { path = "../sonic" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true

# Additional dependencies for CLI
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
ark-std = "0.4"

[dev-dependencies]
tempfile = "3.0"