[package]
name = "zkp-commitments"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Polynomial commitment schemes for zero-knowledge proofs"

[dependencies]
zkp-field = { path = "../field" }
ark-ff.workspace = true
ark-ec.workspace = true
ark-poly.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
ark-bls12-381.workspace = true
rand.workspace = true
thiserror.workspace = true
rayon.workspace = true
blake2.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
rand_chacha.workspace = true

[[bench]]
name = "commitment_ops"
harness = false