[package]
name = "compiler"
version = "0.1.0"
edition = "2021"
description = "Assembler and compiler for zkVM bytecode"

[dependencies]
zkvm-core = { path = "../zkvm-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }