[package]
name = "plonk-field"
version = "0.1.0"
edition = "2021"
description = "Field arithmetic for PLONK using BLS12-381 scalar field"
license = "MIT OR Apache-2.0"

[dependencies]
ark-ff.workspace = true
ark-bls12-381.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true