[package]
name = "groth16-r1cs"
version = "0.1.0"
edition = "2021"
description = "R1CS (Rank-1 Constraint System) implementation for Groth16"

[dependencies]
groth16-field = { path = "../groth16-field" }
ark-ff.workspace = true
ark-std.workspace = true
thiserror.workspace = true
rand.workspace = true

[lib]
name = "groth16_r1cs"