[package]
name = "groth16"
version = "0.1.0"
edition = "2021"
description = "Groth16 zk-SNARK prover and verifier implementation"
license = "MIT"

[dependencies]
r1cs = { path = "../r1cs" }
qap = { path = "../qap" }
setup = { path = "../setup" }
ark-bls12-381 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-std = { workspace = true }
ark-serialize = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand_chacha = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "groth16_bench"
harness = false